Fixes to BodyTextListItem and fixed layout of views, footer and header

--- a/src/components/Tabs/Tabs.scss
+++ b/src/components/Tabs/Tabs.scss
@@ -4,7 +4,7 @@
 }
 
 .kai-tabs {
-  overflow: auto;
+  overflow-x: hidden;
   white-space: nowrap;
   height: var(--tabs-height);
   outline: none;
