--- a/src/views/ListView/ListView.scss
+++ b/src/views/ListView/ListView.scss
@@ -1,5 +1,5 @@
 .kai-list-view {
   width: 100%;
-  height: 100%;
-  overflow-y: scroll;
+  height: stretch;
+  overflow: hidden;
 }
